objects/Rebate_Quote_Price__c.object
<CustomObject>
    <description>This Object is used to store the Rebate Quote prices once approved.</description>
    <fields>
        <fullName>Approved_Date__c</fullName>
        <description>The date on which the price is approved</description>
        <label>Approved Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>BU__c</fullName>
        <description>The business unit for which the price is created</description>
        <label>BU</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ComPartner_Code__c</fullName>
        <description>Comissioned Partner Code</description>
        <label>ComPartner Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ComPartner__c</fullName>
        <description>Quo</description>
        <label>ComPartner</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country_Code__c</fullName>
        <label>Country Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <description>From the key combination</description>
        <label>Country</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Hierarchy_Code__c</fullName>
        <description>Code of the Customer Hierarchy</description>
        <label>Customer Hierarchy Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Hierarchy__c</fullName>
        <description>Name of the Customer Hierarchy</description>
        <label>Customer Hierarchy</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Price_Group_Code__c</fullName>
        <description>A way of grouping materials, products, or services. The system uses divisions to determine the sales areas and business areas to which a material, product, or service belongs. A product or service is always assigned to just one division.</description>
        <label>Customer Price Group Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Price_Group__c</fullName>
        <description>A way of grouping the customers</description>
        <label>Customer Price Group</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Discount__c</fullName>
        <description>Discount quoted on the price</description>
        <label>Discount</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dist_Channel__c</fullName>
        <description>From Key Combination configuration</description>
        <label>Dist. Channel</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Distribution_Channel_Code__c</fullName>
        <description>From Key Combination configuration</description>
        <label>Dist. Channel Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Division_Code__c</fullName>
        <description>From Key Combination configuration</description>
        <label>Division Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Division__c</fullName>
        <description>From Key Combination configuration</description>
        <label>Division</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Use_Code__c</fullName>
        <description>From Key Combination configuration</description>
        <label>End Use Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Use__c</fullName>
        <description>From Key Combination configuration</description>
        <label>End Use</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_User_Code__c</fullName>
        <description>From Key Combination configuration</description>
        <label>End User Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_User__c</fullName>
        <description>From Key Combination configuration</description>
        <label>End User</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_ERP_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ERP ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>F_Product_Hierarchy_Code__c</fullName>
        <formula>PH1_Code__c &amp; PH2_Code__c &amp; PH3_Code__c &amp; PH4_Code__c &amp; PH5_Code__c &amp; PH6_Code__c &amp; PH7_Code__c &amp; PH8_Code__c &amp; PH9_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Hierarchy Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incoterms1__c</fullName>
        <description>From Key Combination configuration</description>
        <label>Incoterms</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incoterms_1_Code__c</fullName>
        <description>From Key Combination configuration</description>
        <label>Incoterms Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KC_SAP__c</fullName>
        <label>KC_SAP</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Key_Combination_Code__c</fullName>
        <description>Key Combination of the price record</description>
        <label>Key Combination Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Key_Combination__c</fullName>
        <description>Key Combination of the price record</description>
        <label>Key Combination</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_Pricing_Util_SFID__c</fullName>
        <description>This field is populated with the legacy One DuPont SF ID and was used during the split to map related records during the split and insert process to maintain the migrated record’s parent-child record relationships.</description>
        <externalId>true</externalId>
        <inlineHelpText>This is the pre-split original 18 digit Salesforce ID of this record that came from the original One Dupont Salesforce instance before the business units were separated. Its is case insensitive and unique.</inlineHelpText>
        <label>Legacy Pricing Util SFID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Market_Segment_Code__c</fullName>
        <description>From Key Combination configuration</description>
        <label>Market Segment Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Market_Segment__c</fullName>
        <description>From Key Combination configuration</description>
        <label>Market Segment</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Material_Code__c</fullName>
        <description>From Key Combination configuration</description>
        <label>Material Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Material_Price_Group_Code__c</fullName>
        <label>Material Price Group Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Material_Price_Group__c</fullName>
        <description>Alphanumeric character string for grouping together materials by combining different characteristics. Product hierarchy on the material master is used by reporting, planning, and pricing.</description>
        <label>Material Price Group</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Material__c</fullName>
        <description>From Key Combination configuration</description>
        <label>Material</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PCKC__c</fullName>
        <description>Concatenation of Pricing Condition and Key Combination</description>
        <formula>Pricing_Condition_Code__c +Sales_Org_Code__c+ Distribution_Channel_Code__c + Division_Code__c + Sold_To_Code__c + Material_Code__c+F_Product_Hierarchy_Code__c+ ShipTo_Code__c + Sales_Office_Code__c + Customer_Price_Group_Code__c + Material_Price_Group_Code__c + Price_List_Type_Code__c+ Terms_of_Payment_code__c +End_Use_Code__c+ Market_Segment_Code__c+ Variant_Code__c+ Sales_Order_Type_Code__c+ Price_Ref_Partner_Code__c+Country_Code__c+ End_User_Code__c+Customer_Hierarchy_Code__c + Profit_Center_Code__c+ Incoterms_1_Code__c + ComPartner_Code__c</formula>
        <label>PCKC</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PH1_Code__c</fullName>
        <label>PH1 Code</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PH1__c</fullName>
        <description>Alphanumeric character string for grouping together materials by combining different characteristics. Product hierarchy on the material master is used by reporting, planning, and pricing.</description>
        <label>PH1</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PH2_Code__c</fullName>
        <label>PH2 Code</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PH2__c</fullName>
        <label>PH2</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PH3_Code__c</fullName>
        <label>PH3 Code</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PH3__c</fullName>
        <label>PH3</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Per__c</fullName>
        <description>Multiplier</description>
        <label>Per</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Price_Holder__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Self lookup to the price holder record</description>
        <label>Price Holder</label>
        <referenceTo>Rebate_Quote_Price__c</referenceTo>
        <relationshipLabel>Rebate Quote Prices</relationshipLabel>
        <relationshipName>Rebate_Quote_Prices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Price_List_Type_Code__c</fullName>
        <description>From Key Combination configuration</description>
        <label>Price List Type Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Price_List_Type__c</fullName>
        <description>From Key Combination configuration</description>
        <label>Price List Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Price_Ref_Partner_Code__c</fullName>
        <description>From Key Combination configuration</description>
        <label>Price Ref. Partner Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Price_Ref_Partner__c</fullName>
        <description>From Key Combination configuration</description>
        <label>Price Ref. Partner</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pricing_Condition_Code__c</fullName>
        <label>Pricing Condition Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pricing_Condition__c</fullName>
        <description>Pricing condition of the price record</description>
        <label>Pricing Condition</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pricing_Request__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Pricing Request id</description>
        <label>Pricing Request</label>
        <referenceTo>Pricing_Request__c</referenceTo>
        <relationshipLabel>Rebate Quote Prices</relationshipLabel>
        <relationshipName>Rebate_Quote_Prices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Hierarchy_Code__c</fullName>
        <label>Product Hierarchy Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Hierarchy__c</fullName>
        <description>Concatenation of the 9 Product Hierarchy Levels, always an 18-character string</description>
        <label>Product Hierarchy</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Profit_Center_Code__c</fullName>
        <description>From Key Combination configuration</description>
        <label>Profit Center Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Profit_Center__c</fullName>
        <description>From Key Combination configuration</description>
        <label>Profit Center</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <description>Quantity of the price record</description>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RPQ_Number__c</fullName>
        <formula>LEFT(Sold_To__c,1)+LEFT(End_User__c,1)+Sold_To_Code__c+End_User_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RPQ Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rate__c</fullName>
        <description>Rate of the price record</description>
        <label>Rate</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SAP_Application_ID__c</fullName>
        <description>SAP configuration</description>
        <label>SAP Application ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAP_Client_ID__c</fullName>
        <description>SAP configuration</description>
        <label>SAP Client ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAP_Cluster__c</fullName>
        <description>SAP configuration</description>
        <label>SAP Cluster</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Office_Code__c</fullName>
        <description>From Key Combination configuration</description>
        <label>Sales Office Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Office__c</fullName>
        <description>From Key Combination configuration</description>
        <label>Sales Office</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Order_Type_Code__c</fullName>
        <label>Sales Order Type Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Order_Type__c</fullName>
        <label>Sales Order Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Org_Code__c</fullName>
        <label>Sales Org. Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Org__c</fullName>
        <description>Sales org of the price record</description>
        <label>Sales Org.</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Pricing_Procedure__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Linkage to the pricing procedure</description>
        <label>Sales Pricing Procedure</label>
        <referenceTo>ERP_Pricing_Procedure__c</referenceTo>
        <relationshipLabel>Rebate Quote Prices</relationshipLabel>
        <relationshipName>Rebate_Quote_Prices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ShipTo_Code__c</fullName>
        <description>From Key Combination configuration</description>
        <label>ShipTo Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShipTo__c</fullName>
        <description>From Key Combination configuration</description>
        <label>ShipTo</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sold_To_Code__c</fullName>
        <description>From Key Combination configuration</description>
        <label>Sold To Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sold_To__c</fullName>
        <description>From Key Combination configuration</description>
        <label>Sold To</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Terms_of_Payment__c</fullName>
        <description>This will hold the payment term of the price record</description>
        <label>Terms of Payment</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Terms_of_Payment_code__c</fullName>
        <description>From Key Combination configuration</description>
        <label>Terms of Payment code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unit__c</fullName>
        <description>Currency of the price record</description>
        <label>Unit</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UoM__c</fullName>
        <description>UoM of the price record</description>
        <label>UoM</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Valid_From__c</fullName>
        <description>Validity dates of the price record</description>
        <label>Valid From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Valid_To__c</fullName>
        <description>Validity dates of the price record</description>
        <label>Valid To</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Variant_Code__c</fullName>
        <description>It will store the material variant code</description>
        <label>Variant Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Variant__c</fullName>
        <description>It will store the material variant name</description>
        <label>Variant</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>isPriceHolder__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Unique Identifier to identify if the record is the actual record or price holder</description>
        <label>isPriceHolder</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>markForDeletion__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Concatenation of all the Pricing condition And Key Combination Values</description>
        <label>markForDeletion</label>
        <type>Checkbox</type>
    </fields>
    <label>Rebate Quote Price</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>RPQ:{YYYY}{MM}{DD}-{000000}</displayFormat>
        <label>Quote Prices Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Rebate Quote Prices</pluralLabel>
    <sharingModel>Private</sharingModel>
    <sharingReasons>
        <fullName>Sharing_with_Public_Group__c</fullName>
        <label>Sharing with Public Group</label>
    </sharingReasons>
</CustomObject>